--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/png" href="/logo.png" />
     <link rel="apple-touch-icon" href="/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline' 'unsafe-eval' https://js.hcaptcha.com https://maps.googleapis.com https://maps.gstatic.com; object-src 'none'; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; img-src 'self' data: blob: https://maps.googleapis.com https://maps.gstatic.com https://*.google.com https://*.gstatic.com; connect-src 'self' https://api.kyradi.com https://*.googleapis.com https://maps.googleapis.com; frame-src https://maps.googleapis.com https://www.google.com;">
+    <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline' 'unsafe-eval' https://js.hcaptcha.com https://maps.googleapis.com https://maps.gstatic.com; object-src 'none'; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; img-src 'self' data: blob: https://maps.googleapis.com https://maps.gstatic.com https://*.google.com https://*.gstatic.com; connect-src 'self' https://api.kyradi.com https://*.railway.app https://*.up.railway.app https://kyradi-saas-canli-production.up.railway.app https://*.googleapis.com https://maps.googleapis.com; frame-src https://maps.googleapis.com https://www.google.com;">
     <title>Kyradi</title>
   </head>
   <body>
